crates/strider-analyze/tests/snapshots/v3__x86__calls__fib_recursive.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x401114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "15" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "31" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x401107:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "39" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ ST0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "43" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v44" [color="#888888", style=dashed];
  "v44" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ EDX", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "45" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v46" [color="#888888", style=dashed];
  "v46" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="φ ESI", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "19" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v48" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v48" [color="#888888", style=dashed];
  "v48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
