crates/strider-analyze/tests/snapshots/v3__x86__calls__mid.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401180:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "5" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "5" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "5" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v10" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v10" -> "6" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x100000004:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "16" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x40119f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "11" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
